revert fix review comment